--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ server.port=8082
 
 #Database configuration
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/test2
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.driverClassName=
+spring.datasource.url=jdbc:
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
